correcting the absolute position center

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="xyz">
+<div class="wishlist-header">
   <img src="../assets/wishcart_jumbo.png" class="img-fluid">
-  <h1 class="abc">
-    Wishlist
-  </h1>
+  <div class="wishlist-header-content d-flex align-items-center justify-content-center">
+    WISHLIST
+  </div>
 </div>
 <app-wishlist-offers [wishlistOffers]="wishlistOffers"></app-wishlist-offers>
