--- a/src/app/component/wishlist-offers/wishlist-offer/wishlist-offer.component.html
+++ b/src/app/component/wishlist-offers/wishlist-offer/wishlist-offer.component.html
@@ -7,6 +7,13 @@
 	  </div>
 	  <div class="col-md-3 col-sm-4 col-6 offer-center">
 	    {{offerList.offerTitle}}
+	    <div class="d-block d-sm-none">
+	    	{{offerList.offerOriginalPrice}}
+	    	<br/>
+	    	{{offerList.offerDiscount}}
+	    	<br/>
+	    	{{offerList.offerValidity}}
+	    </div>
 	  </div>
 	  <div class="col-md-2 col-sm-4 d-none d-sm-block offer-center text-center">
 	    {{offerList.offerOriginalPrice}}
