--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,24 @@
-.xyz {
+.wishlist-header {
 	position: relative;
-	margin: auto;
+	width: 100%;
+	height: 100%;
+	}
+	.wishlist-header-content {
+	  width: 100%;
+	  height: 100%;
+	  position: absolute;
+	  left: 0;
+	  top: 0;
+	  color:white;
+	}
+@media (max-width: 767.98px) {
+	.wishlist-header-content {
+	  font-size: 2rem;
+	}
 }
-.abc {
-  position: absolute;
-  left: 45%;
-  top: 35%;
-  color: white;
+
+@media (min-width: 768px){
+	.wishlist-header-content {
+	  font-size: 3rem;
+	}
 }
