--- a/src/app/component/wishlist-offers/wishlist-offers.component.html
+++ b/src/app/component/wishlist-offers/wishlist-offers.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3 col-sm-4 col-6">
     </div>
-    <div class="col-md-3 col-sm-4 col-6 text-left">
+    <div class="col-md-3 col-sm-4 col-6 d-none d-sm-block text-left">
       PRODUCT
     </div>
     <div class="col-md-2 col-sm-4 d-none d-sm-block text-center">
